# NotificationService

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
architecture/: to_be.puml
event_generators/: Notification.postman_collection.json
letter_templates/: README.md  interface.py  main.html  main.py  models.py
letter_templates/templates/: footer.html  header.html  login.html  test.html
letter_templates/templates/footer/: footer.html
letter_templates/templates/login/: login.html
letter_templates/templates/registration/: register.html
letter_templates/templates/regular/: regul.html
letter_templates/templates/urgent/: ureg.html
nginx/: nginx.conf
nginx/conf.d/: notification.conf
notification/: .dockerignore  Dockerfile  example.env  requirements.txt
notification/api/v1/: serializers.py  urls.py  views.py
notification/config/: settings.py  urls.py
notification/manager_panel/: admin.py  apps.py  models.py
notification/manager_panel/migrations/: 0001_initial.py  0002_remove_messagetemplate_file_and_more.py  0003_events_in_queue.py  0004_alter_events_source.py  0005_events_recipient_uuid.py  0006_rename_content_id_events_content_uuid.py  0007_alter_events_source.py
postgres/: example.env
rabbitmq/: example.env
rabbitmq/conf/: definitions.json
scheduler/: .dockerignore  Dockerfile  config.py  example.env  extractor.py  loader.py  requirements.txt  tasks.py
worker/: .dockerignore  Dockerfile  config.py  enricher.py  example.env  getter.py  main.py  models.py  requirements.txt
