[tool.poetry]
name = "notifications_sprint_1"
version = "0.1.0"
description = ""
authors = [
  "Vasilii Safronov <vasi1988@mail.ru>",
  "Oleg A. <t0rr@mail.ru>",
  ]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
gunicorn = "^20.1.0"
Markdown = "^3.3.7"
python-dotenv = "^0.20.0"
psycopg2-binary = "^2.9.3"
djangorestframework = "^3.13.1"
django-filter = "^21.1"
django-cors-headers = "^3.11.0"
Django = "^4.0.4"
Pillow = "^9.1.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
django-extensions = "^3.1.5"
django-debug-toolbar = "^3.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
